fix banner line wrapping

--- a/styles/index.css
+++ b/styles/index.css
@@ -427,7 +427,6 @@ h1 span {
 
   .banner {
     padding: 0.5rem 0;
-    width: 1500px;
   }
 
   .box {
